--- a/appserviceconfig.json
+++ b/appserviceconfig.json
@@ -3,8 +3,8 @@
   {
     "sampleservice": {
       "protocol": "https",
-      "port": 7777,
-      "hostname": "localhost",
+      "port": 9090,
+      "hostname": "10.20.20.12",
       "description": "REST END POINT For Sample Service.",
       "configfilepath": "./appconfig.json",
       "security": "basic",
