--- a/appconfig.json
+++ b/appconfig.json
@@ -41,6 +41,8 @@
       "configured": true,
       "routeclass": "./sampleservice.js",
       "routefunction": "getHomePage",
+
+
       "description": "Routes to the main page of the web application",
       "examples": [
         {
@@ -64,7 +66,7 @@
     },
  
     {
-      "route": "/showLeads",
+      "route": "/leads",
       "type": "get",
       "configured": true,
       "routeclass": "./sampleservice.js",
@@ -72,12 +74,12 @@
       "description": "Route for listing all the leads available",
       "examples": [
         {
-          "param": "/showLeads"
+          "param": "/leads"
         }
       ]
     },
     {
-      "route": "/showEmployees",
+      "route": "/employees",
       "type": "get",
       "configured": true,
       "routeclass": "./sampleservice.js",
@@ -85,12 +87,12 @@
       "description": "Route for listing all the active employees",
       "examples": [
         {
-          "param": "/showEmployees"
+          "param": "/employees"
         }
       ]
     },
     {
-      "route": "/showContact",
+      "route": "/contact",
       "type": "get",
       "configured": true,
       "routeclass": "./sampleservice.js",
@@ -98,12 +100,12 @@
       "description": "Route for listing all the active Contacts",
       "examples": [
         {
-          "param": "/showContact"
+          "param": "/contact"
         }
       ]
     },
     {
-      "route": "/showAccount",
+      "route": "/account",
       "type": "get",
       "configured": true,
       "routeclass": "./sampleservice.js",
@@ -111,12 +113,12 @@
       "description": "Route for listing all the active accounts",
       "examples": [
         {
-          "param": "/showAccount"
+          "param": "/account"
         }
       ]
     },
     {
-      "route": "/showOpportunity",
+      "route": "/opportunity",
       "type": "get",
       "configured": true,
       "routeclass": "./sampleservice.js",
@@ -124,62 +126,381 @@
       "description": "Route for listing all the available opportunities",
       "examples": [
         {
-          "param": "/showOpportunity"
-        }
-      ]
-    },
-    {
-      "route": "/addContact",
-      "type": "post",
-      "configured": true,
-      "routeclass": "./sampleservice.js",
-      "routefunction": "addContactPage",
-      "description": "Route for creation of new contact",
-      "examples": [
-        {
-          "param": "/addContact"
-        }
-      ]
-    },
-    
-    {
-      "route": "/addAccount",
-      "type": "post",
-      "configured": true,
-      "routeclass": "./sampleservice.js",
-      "routefunction": "addAccountPage",
-      "description": "Route for creation of new account",
-      "examples": [
-        {
-          "param": "/addAccount"
-        }
-      ]
-    },
-    
-    {
-      "route": "/addOpportunity",
-      "type": "post",
-      "configured": true,
-      "routeclass": "./sampleservice.js",
-      "routefunction": "addOpportunity",
-      "description": "Route for creation of new opportunity",
-      "examples": [
-        {
-          "param": "/addOpportunity"
+          "param": "/opportunity"
         }
       ]
     },
    
     {
-      "route": "/addLead",
+      "route": "/contact",
+      "type": "post",
+      "configured": true,
+      "routeclass": "./sampleservice.js",
+      "routefunction": "addContactPage",
+      "description": "Route for creation of new contact",
+      "bodyschema": {
+        "type": "object",
+        "required": [
+          "firstname",
+          "lastname",
+          "accountname",
+          "jobtitle",
+          "functionname",
+          "department",
+          "phone",
+          "city",
+          "fax",
+          "mobile",
+          "email"
+        ],
+        "properties": {
+          "firstname": {
+            "description": "First Name",
+            "type": "string"
+          },
+          "lastname": {
+            "description": "Last Name",
+            "type": "string"
+          },
+          "accountname": {
+            "description": "Last Name",
+            "type": "string"
+          },
+          "jobtitle": {
+            "description": "account",
+            "type": "string"
+          },
+          "functionname": {
+            "description": "Function",
+            "type": "string"
+          },
+          "department": {
+            "description": "Department or Division",
+            "type": "string"
+          },
+          "phone": {
+            "description": "Phone number",
+            "type": "string",
+            "minLength":3
+          },
+          "city": {
+            "description": "City",
+            "type": "string"
+          },
+          "fax": {
+            "description": "Fax number",
+            "type": "string",
+            "minLength":3
+          },
+          "mobile": {
+            "description": "Mobile number",
+            "type": "string",
+            "minLength":3
+          },
+          "email": {
+            "description": "Email address",
+            "type": "string",
+            "format":"email"
+          }
+        }
+      },
+
+      "examples": [
+        {
+          "param": "/contact",
+          "payload": {
+            "firstname":"savitha",
+            "lastname":"karamchedu",
+            "account":"accountname",
+            "jobtitle":"software developer",
+            "function1":"function1_name",
+            "department":"department1",
+            "phone":"(123)456-1234",
+            "city":"Bangalore",
+            "fax":"(123)456-1234",
+            "mobile":"(123)456-1234",
+            "email":"savitha.karamchedu@ltts.com"
+          }
+        }
+      ]
+    },
+    
+    {
+      "route": "/account",
+      "type": "post",
+      "configured": true,
+      "routeclass": "./sampleservice.js",
+      "routefunction": "addAccountPage",
+      "description": "Route for creation of new account",
+      "bodyschema": {
+        "type": "object",
+        "required": [
+          "name",
+          "prospect",
+          "parentaccount",
+          "website",
+          "accountcategory",
+          "vertical",
+          "country",
+          "city",
+          "state",
+          "owner"
+        ],
+        "properties": {
+          "name": {
+            "description": "Name",
+            "type": "string"
+          },
+          "prospect": {
+            "description": "Prospect",
+            "type": "string"
+          },
+          "parentaccount": {
+            "description": "Parent account",
+            "type": "string"
+          },
+          "website": {
+            "description": "Website",
+            "type": "string"
+          },
+          "accountcategory": {
+            "description": "Account Category",
+            "type": "string"
+          },
+          "vertical": {
+            "description": "Vertical",
+            "type": "string"
+          },
+          "country": {
+            "description": "Country",
+            "type": "string",
+            "minLength":3
+          },
+          "city": {
+            "description": "City",
+            "type": "string"
+          },
+          "state": {
+            "description": "Fax number",
+            "type": "string",
+            "minLength":3
+          },
+          "owner": {
+            "description": "Owner of the Account",
+            "type": "string"
+          }
+        }
+      },
+      "examples": [
+        {
+          "param": "/account",
+          "payload": {
+              "name":"Google india",
+              "prospect":"yes",
+              "parentaccount":"Goolge",
+              "website":"www.google.com",
+              "accountcategory":"Paltinum",
+              "vertical":"ISV",
+              "country":"India",
+              "city":"Hyderabad",
+              "state":"Telangana",
+              "owner":"Arpit Bhaderia"
+            }
+        }
+      ]
+    },
+    
+    {
+      "route": "/opportunity",
+      "type": "post",
+      "configured": true,
+      "routeclass": "./sampleservice.js",
+      "routefunction": "addOpportunity",
+      "description": "Route for creation of new opportunity",
+      "bodyschema": {
+        "type": "object",
+        "required": [
+          "oppName",
+          "Accountopp",
+          "PrimaryContact",
+          "Source",
+          "Exceptedvalue",
+          "StartDate",
+          "ClosingDate",
+          "SalesCycle",
+          "Salesphase",
+          "Probability",
+          "PublishtoForecast",
+          "ForecastCategory",
+          "convertcategory",
+          "Owneropp"
+        ],
+        "properties": {
+          "oppName": {
+            "description": "Name of the opportunity",
+            "type": "string"
+          },
+          "Accountopp": {
+            "description": "Account of the opportunity",
+            "type": "string"
+          },
+          "PrimaryContact": {
+            "description": "Primary contact for the opportunity",
+            "type": "string"
+          },
+          "Source": {
+            "description": "Source",
+            "type": "string"
+          },
+          "Exceptedvalue": {
+            "description": "Exceptedvalue",
+            "type": "string"
+          },
+          "StartDate": {
+            "description": "Start Date",
+            "type": "string"
+          },
+          "ClosingDate": {
+            "description": "Closing Date",
+            "type": "string",
+            "minLength":3
+          },
+          "SalesCycle": {
+            "description": "Sales Cycle",
+            "type": "string"
+          },
+          "Salesphase": {
+            "description": "Sales Phase",
+            "type": "string",
+            "minLength":3
+          },
+          "Probability": {
+            "description": "Probability",
+            "type": "string"
+          },
+          "PublishtoForecast": {
+            "description": "Publish to Forecast",
+            "type": "string"
+          },
+          "ForecastCategory": {
+            "description": "Forecast Category",
+            "type": "string"
+          },
+          "convertcategory": {
+            "description": "convert category",
+            "type": "string"
+          },
+          "Owneropp": {
+            "description": "Owner of the opportunity",
+            "type": "string"
+          }
+
+        }
+      },
+      "examples": [
+        {
+          "param": "/opportunity",
+          "payload": {
+            "oppName":"Google Opportunity",
+            "Accountopp":"Google",
+            "PrimaryContact":"Arpit",
+            "Source":"Current Account",
+            "Exceptedvalue":"2000000",
+            "StartDate":"31/03/19",
+            "ClosingDate":"31/03/20",
+            "SalesCycle":"New",
+            "Salesphase":"10% - Ideation",
+            "Probability":"50%",
+            "PublishtoForecast":"Yes",
+            "ForecastCategory":"Pipeline",
+            "convertcategory":"Consulting",
+            "Owneropp":"Arpit"
+            }
+        }
+      ]
+    },
+   
+    {
+      "route": "/leads",
       "type": "post",
       "configured": true,
       "routeclass": "./sampleservice.js",
       "routefunction": "addLead",
       "description": "Route for creation of new lead",
+      "bodyschema": {
+        "type": "object",
+        "required": [
+                "title",
+                "company",
+                "firstname",
+                "lastname",
+                "status",
+                "qul",
+                "source",
+                "category",
+                "priority",
+                "owner"
+        ],
+        "properties": {
+          "title": {
+            "description": "Lead name",
+            "type": "string"
+          },
+          "company": {
+            "description": "Company name",
+            "type": "string"
+          },
+          "firstname": {
+            "description": "first Name",
+            "type": "string"
+          },
+          "lastname": {
+            "description": "Last name",
+            "type": "string"
+          },
+          "status": {
+            "description": "status",
+            "type": "string"
+          },
+          "qul": {
+            "description": "Qualification level",
+            "type": "string"
+          },
+          "source": {
+            "description": "Source of the lead",
+            "type": "string",
+            "minLength":3
+          },
+          "category": {
+            "description": "Category",
+            "type": "string"
+          },
+          "priority": {
+            "description": "Priority",
+            "type": "string",
+            "minLength":3
+          },
+          "owner": {
+            "description": "Owner of the Lead",
+            "type": "string"
+          }
+        }
+      },
       "examples": [
         {
-          "param": "/addLead"
+          "param": "/leads",
+          "payload": {
+            "title":"Lead 1",
+            "company":"LTTS",
+            "firstname":"Arpit",
+            "lastname":"Bhaderia",
+            "status":"Accepted",
+            "qul":"Cold",
+            "source":"Campaign",
+            "category":"Consulting",
+            "priority":"Immedaite",
+            "owner":"Arpit"
+            }
         }
       ]
     },
