commited by indrani on 24-5-19

--- a/appconfig.json
+++ b/appconfig.json
@@ -96,6 +96,21 @@
       ]
     },
     {
+      "route": "/delete/:i",
+      "type": "get",
+      "configured": true,
+      "routeclass": "./sampleservice.js",
+      "routefunction": "deletedisplay",
+
+
+      "description": "Routes to display id of an record in hidden",
+      "examples": [
+        {
+          "param": "/delete/:i"
+        }
+      ]
+    },
+    {
       "route": "/logout",
       "type": "get",
       "configured": true,
