--- a/appserviceconfig.json
+++ b/appserviceconfig.json
@@ -14,7 +14,10 @@
       "configfilepath": "./appconfig.json",
       "security": "basic",
 	  "certPath" : "./localhosttest"
+
 	  hi
+	  hello
+
     }
   }
 }
